cambie el nombre de una carpeta index

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <nav class="navegacion-principal contenedor">
     <a href="html/inicio.html" target="_blank" rel="noopener noreferrer">Inicio</a>
     <a href="html/nosotros.html" target="_blank" rel="noopener noreferrer">Estudiantes</a>
-    <a href="html/clientes.html" target="_blank" rel="noopener noreferrer">Profesores</a>
+    <a href="html/profesores.html" target="_blank" rel="noopener noreferrer">Profesores</a>
     <a href="html/contactos.html" target="_blank" rel="noopener noreferrer">Administrativos</a>
     <a href="html/carrito.html" target="_blank" rel="noopener noreferrer">Computadores</a>
   </nav>
