--- a/index.html
+++ b/index.html
@@ -19,14 +19,15 @@
 
 </head>
 <h1 class="title">Ingreso a la clase de Programación <span>Avanzada</span></h1>
-<div class="sidenav">
+<div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
   <a href="#">About</a>
   <a href="#">Services</a>
   <a href="#">Clients</a>
   <a href="#">Contact</a>
 </div>
-<div class="open">
+
+<div id="main">
   <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; open</span>
 </div>
 <div class="nav-bg">
