--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
 </div>
 <div class="nav-bg">
   <nav class="navegacion-principal contenedor">
-    <a href="html/inicio.html" target="_blank" rel="noopener noreferrer">Inicio</a>
-    <a href="html/nosotros.html" target="_blank" rel="noopener noreferrer">Estudiantes</a>
-    <a href="html/clientes.html" target="_blank" rel="noopener noreferrer">Profesores</a>
-    <a href="html/contactos.html" target="_blank" rel="noopener noreferrer">Administrativos</a>
-    <a href="html/carrito.html" target="_blank" rel="noopener noreferrer">Computadores</a>
+    <a href="../ProgramAva/index.html" target="_blank" rel="noopener noreferrer">Inicio</a>
+    <a href="../ProgramAva/html/estudiantes.html" target="_blank" rel="noopener noreferrer">Estudiantes</a>
+    <a href="../ProgramAva/html/profesores.html" target="_blank" rel="noopener noreferrer">Profesores</a>
+    <a href="../ProgramAva/html/administrativos.html" target="_blank" rel="noopener noreferrer">Administrativos</a>
+    <a href="../ProgramAva/html/computadores.html" target="_blank" rel="noopener noreferrer">Computadores</a>
   </nav>
 </div>
 <!-- Reglas para utilizar la etiqueta section: sí el primer elemento hijo de esta etiqueta que utilizamos para 
