--- a/contactos.html
+++ b/contactos.html
@@ -4,17 +4,27 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <!-- Con esta etiqueta link se puede enlazar con el archivo styles.css -->
-  <link rel="preload" href="../css/styles.css" as="style" />
-  <link rel="stylesheet" href="../css/styles.css" />
-  <title>Contactos</title>
+  <title>Formulario de Contacto</title>
 </head>
 
 <body>
-  <h1 class="title">Nuestros Contactos</h1>
-  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam blanditiis enim ipsum, neque quos vitae quidem
-    fugiat dolor, laborum inventore eos? Provident alias, quaerat dolores voluptatum cum pariatur aperiam voluptates?
-  </p>
+  <h1>Contacto</h1>
+
+  <form action="#" method="post">
+    <label for="nombre">Nombre completo:</label>
+    <input type="text" id="nombre" name="nombre" required />
+
+    <label for="correo">Correo electrónico:</label>
+    <input type="email" id="correo" name="correo" required />
+
+    <label for="telefono">Teléfono:</label>
+    <input type="tel" id="telefono" name="telefono" required />
+
+    <label for="mensaje">Mensaje:</label>
+    <textarea id="mensaje" name="mensaje" rows="4" required></textarea>
+
+    <button type="submit">Enviar</button>
+  </form>
 </body>
 
 </html>
