realice el footer

--- a/contactos.html
+++ b/contactos.html
@@ -15,3 +15,11 @@
  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam blanditiis enim ipsum, neque quos vitae quidem
    fugiat dolor, laborum inventore eos? Provident alias, quaerat dolores voluptatum cum pariatur aperiam voluptates?
  </p>
+ <div>
+  <h2>este es un nivel de titulo</h2>
+ </div>
+ </body>
+ <footer>
+  <h1>Este es el footer</h1>
+ </footer>
+ </html>
