Realice un buzon de ayuda para que el cliente escriba

--- a/index.html
+++ b/index.html
@@ -323,6 +323,10 @@
               <input class="input-text" type="Documento " name="" id="" placeholder="Numero de documento" />
             </div>
             <div class="campo">
+              <label for="">ayuda</label>
+              <input class="input-text" type="ayuda " name="" id="" placeholder="ayuda" />
+            </div>
+            <div class="campo">
               <label for="">Mensaje</label>
               <textarea class="input-text"></textarea>
             </div>
